opam-version: "1.2"
maintainer: "rudi.grinberg@gmail.com"
authors: ["Rudi Grinberg"]
homepage: "https://github.com/rgrinberg/ppx_getenv2"
bug-reports: "https://github.com/rgrinberg/ppx_getenv2/issues"
dev-repo: "git+https://github.com/rgrinberg/ppx_getenv2.git"
license: "Apache-2.0"

build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]

depends: [
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]